# heca_ual

./: README.md
arm_description/urdf/: multirotor_base.xacro
gazebo_ros_plugin/: CMakeLists.txt  package.xml
gazebo_ros_plugin/include/gazebo_ros_plugin/: Set_activation.h  Set_activationRequest.h  Set_activationResponse.h
gazebo_ros_plugin/include/service_tutorial/: Set_position.h  Set_positionRequest.h  Set_positionResponse.h
gazebo_ros_plugin/launch/: hello.launch  joint_position.launch
gazebo_ros_plugin/models/cylinder/: model.config  model.sdf
gazebo_ros_plugin/models/joint_position_sdf/: joint_position_sdf.sdf  model.config
gazebo_ros_plugin/models/minibox/: minibox.sdf  model.config
gazebo_ros_plugin/src/: ServicePlugin.cpp  Set_activation_client.cpp  Set_activation_server.cpp  Set_autoposition_client.cpp  Set_position_client.cpp  joint_position.cpp  positioner_plugin.cpp
gazebo_ros_plugin/worlds/: hello.world  joint_position.world
grvc-ual/px4_bringup/: CMakeLists.txt  empty.world
grvc-ual/px4_bringup/config/: empty_light.world  simulation_params.yaml
grvc-ual/px4_bringup/launch/: gazebo.launch  heca_collision_controllers.launch  heca_positioner_controllers.launch  spawn_robot.launch  test_simulate.launch
grvc-ual/px4_bringup/scripts/: launch_gzworld.py  run_px4sitl.py  spawn_gzmodel.py
grvc-ual/robots_description/: package.xml
grvc-ual/robots_description/models/aeroarms_pendulum/: 4dof.xacro  geometry.xacro  model.gazebo  model.xacro
grvc-ual/robots_description/urdf/: multirotor_base.xacro
grvc-ual/uav_abstraction_layer/: CMakeLists.txt
grvc-ual/uav_abstraction_layer/launch/: test_light_simulation.launch
grvc-ual/uav_abstraction_layer/src/: backend_mavros.cpp  test_ual_interfaces.cpp  uav_fly.cpp
